--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <div class="boxs">
         <h1>Color Scheme Switcher</h1>
         <span class="button" id="grey"></span>
-        <span class="button" id="white"></span>
+        <span class="button" id="purple"></span>
         <span class="button" id="blue"></span>
         <span class="button" id="yellow"></span> 
-        
+        <div>
+            <button id="clear">Clear</button>
+        </div>
         <h2>
             Try clicking on one of the colors above
         <span>to change the background color of this page!</span>
